[package]
name = "mipsasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
modular-bitfield = "0.11"
pest = "2.4"
pest_derive = "2.4"
thiserror = "1.0"
